4584.	[bug]		A number of memory usage statistics were not properly
			reported when they exceeded 4G.  [RT #44750]

	--- 9.10.5 released ---

	--- 9.10.5rc3 released ---

4582.	[security]	'rndc ""' could trigger a assertion failure in named.
			(CVE-2017-3138) [RT #44924]

4581.	[port]		Linux: Add getpid and getrandom to the list of system
			calls named uses for seccomp. [RT #44883]

4580.	[bug]		4578 introduced a regression when handling CNAME to
			referral below the current domain. [RT #44850]

	--- 9.10.5rc2 released ---

4578.	[security]	Some chaining (CNAME or DNAME) responses to upstream
			queries could trigger assertion failures.
			(CVE-2017-3137) [RT #44734]

4575.	[security]	DNS64 with "break-dnssec yes;" can result in an
			assertion failure. (CVE-2017-3136) [RT #44653]

	--- 9.10.5rc1 released ---

4571.	[bug]		Out-of-tree builds of backtrace_test failed.

4570.	[cleanup]	named did not correctly fall back to the built-in
			initializing keys if the bind.keys file was present
			but empty. [RT #44531]

4568.	[contrib]	Added a --with-bind option to the dnsperf configure
			script to specify BIND prefix path.

4567.	[port]		Call getprotobyname and getservbyname prior to calling
			chroot so that shared libraries get loaded. [RT #44537]

4564.	[maint]		Update the built in managed keys to include the
			upcoming root KSK. [RT #44579]

4563.	[bug]		Modified zones would occasionally fail to reload.
			[RT #39424]

4561.	[port]		Silence a warning in strict C99 compilers. [RT #44414]

4560.	[bug]		mdig: add -m option to enable memory debugging rather
			than having it on all the time. [RT #44509]

4559.	[bug]		openssl_link.c didn't compile if ISC_MEM_TRACKLINES
			was turned off.  [RT #44509]

4558.	[bug]		Synthesised CNAME before matching DNAME was still
			being cached when it should not have been.  [RT #44318]

4557.	[security]	Combining dns64 and rpz can result in dereferencing
			a NULL pointer (read).  (CVE-2017-3135) [RT#44434]
